--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,5 @@
 (library
  (name orandom)
  (public_name orandom)
+ (libraries unix)
  (flags (-w A-4-9-40-42-44-45 -warn-error A-4-9-34-40-42-44-45-58)))
