--- a/orandom.opam
+++ b/orandom.opam
@@ -8,7 +8,7 @@ bug-reports: "https://github.com/r6eve/orandom/issues"
 license: "Boost Software License - Version 1.0"
 dev-repo: "git://github.com:r6eve/orandom.git"
 build: [
-  [make]
+  ["dune" "build"]
 ]
 depends: [
   "ocaml" {>= "4.07.0"}
