--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2
+
 jobs:
   build_and_test:
     docker:
@@ -14,3 +15,9 @@ jobs:
       - run:
           name: Test
           command: eval `opam config env` && dune runtest
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build_and_test
